Bug fixed invisible dropdown covering other elements (#77)

--- a/frontend/style/output.css
+++ b/frontend/style/output.css
@@ -560,6 +560,14 @@ video {
   pointer-events: none;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
+.collapse {
+  visibility: collapse;
+}
+
 .static {
   position: static;
 }
@@ -642,6 +650,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-1 {
